# Structural-Programming-24-25

./: .gitignore  CMakeLists.txt  README.md
aud_vezhbi/prv_kolokvium/: zad0.cpp  zad1.cpp  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad16.cpp  zad17.cpp  zad18.cpp  zad19.cpp  zad2.cpp  zad20.cpp  zad21.cpp  zad22.cpp  zad23.cpp  zad24.cpp  zad25.cpp  zad26.cpp  zad27.cpp  zad28.cpp  zad29.cpp  zad3.cpp  zad30.cpp  zad31.cpp  zad32.cpp  zad33.cpp  zad34.cpp  zad35.cpp  zad36.cpp  zad37.cpp  zad38.cpp  zad39.cpp  zad4.cpp  zad40.cpp  zad41.cpp  zad42.cpp  zad43.cpp  zad44.cpp  (+16 more)
aud_vezhbi/vtor_kolokvium/: zad69.cpp  zad70.cpp  zad71.cpp  zad72.cpp  zad73.cpp  zad74.cpp  zad75.cpp  zad76.cpp  zad77.cpp  zad78.cpp  zad79.cpp  zad80.cpp  zad81.cpp  zad82.cpp  zad83.cpp  zad84.cpp  zad85.cpp  zad86.cpp  zad87.cpp  zad88.cpp  zad89.cpp  zad90.cpp  zad91.cpp  zad92.cpp
aud_vezhbi/vtorkolokvium-lani/: zad56.cpp  zad57.cpp  zad58.cpp  zad60.cpp  zad61.cpp  zad62.cpp
aud_vezhbi/vtorkolokvium-zadachi-vid-stefan/: readme.md  zad93.cpp  zad94.cpp  zad95.cpp  zad96.cpp  zad97.cpp  zad98.cpp  zad99.cpp
ispitni_vezhbi/: ispitna10.cpp  ispitna11.cpp  ispitna12.cpp  ispitna2.cpp  ispitna20_kolokvium_mk_zad1_grupa1.cpp  ispitna21_kolokvium_mk_zad2_grupa1.cpp  ispitna22_kolokvium_mk_zad1_grupa2.cpp  ispitna23_kolokvium_mk_zad2_grupa2.cpp  ispitna24.cpp  ispitna25.cpp  ispitna26.cpp  ispitna28.cpp  ispitna29.cpp  ispitna30.cpp  ispitna31.cpp  ispitna32.cpp  ispitna36.cpp  ispitna37.cpp  ispitna38.cpp  ispitna5.cpp  ispitna8.cpp  ispitna9.cpp
ispitni_vezhbi/prv_kolokvium/: ispitna14.cpp  ispitna15.cpp  ispitna16.cpp  ispitna17.cpp  ispitna27.cpp  ispitna31.cpp  ispitna32.cpp  ispitna33.cpp  ispitna34.cpp  prv_kolok_zad10_mk.cpp  prv_kolok_zad11_mk.cpp  prv_kolok_zad12_mk.cpp  prv_kolok_zad13_eng.cpp  prv_kolok_zad13_mk.cpp  prv_kolok_zad1_eng.cpp  prv_kolok_zad1_mk.cpp  prv_kolok_zad3_eng.cpp  prv_kolok_zad3_mk.cpp  prv_kolok_zad4_mk.cpp  prv_kolok_zad5_mk.cpp  prv_kolok_zad6_eng.cpp  prv_kolok_zad6_mk.cpp  prv_kolok_zad7_mk.cpp  prv_kolok_zad8_mk.cpp  prv_kolok_zad9_mk.cpp
ispitni_vezhbi/vtor_kolokvium_ispitni/: ispitna35.cpp  ispitna38.cpp  ispitna39.cpp  ispitna40.cpp  ispitna42.cpp  ispitna44.cpp  ispitna45.cpp  ispitna46.cpp  ispitna48.cpp  ispitna50.cpp  ispitna51.cpp  ispitna53.cpp  ispitna54.cpp  ispitna55.cpp  ispitna56.cpp  ispitna57.cpp  ispitna61.cpp  ispitna62.cpp  ispitna63.cpp  ispitna64.cpp  ispitna65.cpp  ispitna66.cpp  ispitna67.cpp  ispitna99.cpp  vtor_kolok__zad10_pt2.cpp  vtor_kolok__zad13_pt2.cpp  vtor_kolok__zad14_pt2.cpp  vtor_kolok__zad15_pt2.cpp  vtor_kolok__zad17_pt2.cpp  vtor_kolok__zad19_pt2.cpp  vtor_kolok__zad3_pt2.cpp  vtor_kolok__zad4_pt2.cpp  vtor_kolok__zad7_pt2.cpp  vtor_kolok__zad9_pt2.cpp  vtor_kolok_eng_zad1.cpp  vtor_kolok_eng_zad13.cpp  vtor_kolok_eng_zad15.cpp  vtor_kolok_eng_zad17.cpp  vtor_kolok_eng_zad19.cpp  vtor_kolok_eng_zad20.cpp  (+26 more)
labs_vezhbi/: lab2.cpp  lab8_det1.cpp  lab8_det2.cpp  lab8_det3.cpp  lab9_det3.cpp  lab_nedela_2_1.cpp  lab_nedela_2_2.cpp  lab_nedela_2_3.cpp  lab_nedela_3_3.cpp  lab_nedela_4_3.cpp
labs_vezhbi/lab_ushtrime/: lab_ushtrimi_1.cpp  lab_ushtrimi_10.cpp  lab_ushtrimi_11.cpp  lab_ushtrimi_12.cpp  lab_ushtrimi_13.cpp  lab_ushtrimi_14.cpp  lab_ushtrimi_15.cpp  lab_ushtrimi_16.cpp  lab_ushtrimi_17.cpp  lab_ushtrimi_18.cpp  lab_ushtrimi_19.cpp  lab_ushtrimi_2.cpp  lab_ushtrimi_20.cpp  lab_ushtrimi_21.cpp  lab_ushtrimi_22.cpp  lab_ushtrimi_23.cpp  lab_ushtrimi_24.cpp  lab_ushtrimi_25.cpp  lab_ushtrimi_26.cpp  lab_ushtrimi_27.cpp  lab_ushtrimi_28.cpp  lab_ushtrimi_29.cpp  lab_ushtrimi_3.cpp  lab_ushtrimi_30.cpp  lab_ushtrimi_31.cpp  lab_ushtrimi_32.cpp  lab_ushtrimi_33.cpp  lab_ushtrimi_34.cpp  lab_ushtrimi_35.cpp  lab_ushtrimi_36.cpp  lab_ushtrimi_37.cpp  lab_ushtrimi_38.cpp  lab_ushtrimi_39.cpp  lab_ushtrimi_4.cpp  lab_ushtrimi_40.cpp  lab_ushtrimi_41.cpp  lab_ushtrimi_42.cpp  lab_ushtrimi_44.cpp  lab_ushtrimi_5.cpp  lab_ushtrimi_6.cpp  (+3 more)
labs_vezhbi/labs_24-25/: lab1.cpp  lab9_det1.cpp  lab9_det2.cpp  lab_nedela_3_1.cpp  lab_nedela_3_1v2.cpp  lab_nedela_3_2.cpp  lab_nedela_3_2v2.cpp  lab_nedela_3_3v2.cpp  lab_nedela_4_1.cpp  lab_nedela_4_2.cpp
prv_kolok_eng/: first_midterm_eng_task1.cpp  first_midterm_eng_task2.cpp  prv_kolok_zad4_eng.cpp  prv_kolok_zad7_eng.cpp  questions.md
prv_kolok_mk/: prv_kolok_zad11_mk.cpp  prv_kolok_zad12_mk.cpp  prv_kolok_zad2_mk.cpp  prv_kolok_zad4_mk.cpp  prv_kolok_zad6_mk.cpp  prv_kolok_zad7_mk.cpp  prv_kolok_zad8_mk.cpp  prv_kolok_zad9_mk.cpp
vtor_kolok_ispitni_eng/: vtor_kolok_eng_zad10.cpp  vtor_kolok_eng_zad11.cpp  vtor_kolok_eng_zad12.cpp  vtor_kolok_eng_zad14.cpp  vtor_kolok_eng_zad16.cpp  vtor_kolok_eng_zad18.cpp  vtor_kolok_eng_zad19.cpp  vtor_kolok_eng_zad2.cpp  vtor_kolok_eng_zad21.cpp  vtor_kolok_eng_zad24.cpp  vtor_kolok_eng_zad28.cpp  vtor_kolok_eng_zad29.cpp  vtor_kolok_eng_zad32.cpp
vtor_kolok_ispitni_mk/: vtor_kolok__zad11_pt2.cpp  vtor_kolok__zad12_pt2.cpp  vtor_kolok__zad16_pt2.cpp  vtor_kolok__zad18_pt2.cpp  vtor_kolok__zad1_pt2.cpp  vtor_kolok__zad2_pt2.cpp  vtor_kolok__zad4_pt2.cpp  vtor_kolok__zad8_pt2.cpp
vtor_kolok_ispitni_mk_dop/: vtor_kolok_zad10_dop.cpp  vtor_kolok_zad11_dop.cpp  vtor_kolok_zad2_dop.cpp  vtor_kolok_zad5_dop.cpp  vtor_kolok_zad9_dop.cpp
