cmake_minimum_required(VERSION 3.28)
project(sp24_25)

set(CMAKE_CXX_STANDARD 17)

add_executable(zad0 aud_vezhbi/prv_kolokvium/zad0.cpp)
add_executable(zad1 aud_vezhbi/prv_kolokvium/zad1.cpp)
add_executable(zad2 aud_vezhbi/prv_kolokvium/zad2.cpp)
add_executable(zad3 aud_vezhbi/prv_kolokvium/zad3.cpp)
add_executable(zad4 aud_vezhbi/prv_kolokvium/zad4.cpp)
add_executable(zad5 aud_vezhbi/prv_kolokvium/zad5.cpp)
add_executable(zad6 aud_vezhbi/prv_kolokvium/zad6.cpp)
add_executable(zad7 aud_vezhbi/prv_kolokvium/zad7.cpp)
add_executable(zad8 aud_vezhbi/prv_kolokvium/zad8.cpp)
add_executable(zad9 aud_vezhbi/prv_kolokvium/zad9.cpp)
add_executable(zad10 aud_vezhbi/prv_kolokvium/zad10.cpp)
add_executable(zad11 aud_vezhbi/prv_kolokvium/zad11.cpp)
add_executable(zad12 aud_vezhbi/prv_kolokvium/zad12.cpp)
add_executable(zad13 aud_vezhbi/prv_kolokvium/zad13.cpp)
add_executable(zad14 aud_vezhbi/prv_kolokvium/zad14.cpp)
add_executable(zad15 aud_vezhbi/prv_kolokvium/zad15.cpp)
add_executable(zad16 aud_vezhbi/prv_kolokvium/zad16.cpp)
add_executable(zad17 aud_vezhbi/prv_kolokvium/zad17.cpp)
add_executable(zad18 aud_vezhbi/prv_kolokvium/zad18.cpp)
add_executable(zad19 aud_vezhbi/prv_kolokvium/zad19.cpp)
add_executable(zad20 aud_vezhbi/prv_kolokvium/zad20.cpp)
add_executable(zad21 aud_vezhbi/prv_kolokvium/zad21.cpp)
add_executable(zad22 aud_vezhbi/prv_kolokvium/zad22.cpp)
add_executable(zad23 aud_vezhbi/prv_kolokvium/zad23.cpp)
add_executable(zad24 aud_vezhbi/prv_kolokvium/zad24.cpp)
add_executable(zad25 aud_vezhbi/prv_kolokvium/zad25.cpp)
add_executable(zad26 aud_vezhbi/prv_kolokvium/zad26.cpp)
add_executable(zad27 aud_vezhbi/prv_kolokvium/zad27.cpp)
add_executable(zad28 aud_vezhbi/prv_kolokvium/zad28.cpp)
add_executable(zad29 aud_vezhbi/prv_kolokvium/zad29.cpp)
add_executable(zad30 aud_vezhbi/prv_kolokvium/zad30.cpp)
add_executable(zad31 aud_vezhbi/prv_kolokvium/zad31.cpp)
add_executable(zad32 aud_vezhbi/prv_kolokvium/zad32.cpp)
add_executable(zad33 aud_vezhbi/prv_kolokvium/zad33.cpp)
add_executable(zad34 aud_vezhbi/prv_kolokvium/zad34.cpp)
add_executable(zad35 aud_vezhbi/prv_kolokvium/zad35.cpp)
add_executable(zad36 aud_vezhbi/prv_kolokvium/zad36.cpp)
add_executable(zad37 aud_vezhbi/prv_kolokvium/zad37.cpp)
add_executable(zad38 aud_vezhbi/prv_kolokvium/zad38.cpp)
add_executable(zad39 aud_vezhbi/prv_kolokvium/zad39.cpp)
add_executable(zad40 aud_vezhbi/prv_kolokvium/zad40.cpp)
add_executable(zad41 aud_vezhbi/prv_kolokvium/zad41.cpp)
add_executable(zad42 aud_vezhbi/prv_kolokvium/zad42.cpp)
add_executable(zad43 aud_vezhbi/prv_kolokvium/zad43.cpp)
add_executable(zad44 aud_vezhbi/prv_kolokvium/zad44.cpp)
add_executable(zad45 aud_vezhbi/prv_kolokvium/zad45.cpp)
add_executable(zad46 aud_vezhbi/prv_kolokvium/zad46.cpp)
add_executable(zad47 aud_vezhbi/prv_kolokvium/zad47.cpp)
add_executable(zad48 aud_vezhbi/prv_kolokvium/zad48.cpp)
add_executable(zad49 aud_vezhbi/prv_kolokvium/zad49.cpp)
add_executable(zad50 aud_vezhbi/prv_kolokvium/zad50.cpp)
add_executable(zad51 aud_vezhbi/prv_kolokvium/zad51.cpp)
add_executable(zad52 aud_vezhbi/prv_kolokvium/zad52.cpp)
add_executable(zad53 aud_vezhbi/prv_kolokvium/zad53.cpp)
add_executable(zad54 aud_vezhbi/prv_kolokvium/zad54.cpp)
add_executable(zad55 aud_vezhbi/prv_kolokvium/zad55.cpp)

add_executable(zad69 aud_vezhbi/vtor_kolokvium/zad69.cpp)
add_executable(zad70 aud_vezhbi/vtor_kolokvium/zad70.cpp)
add_executable(zad71 aud_vezhbi/vtor_kolokvium/zad71.cpp)
add_executable(zad72 aud_vezhbi/vtor_kolokvium/zad72.cpp)
add_executable(zad73 aud_vezhbi/vtor_kolokvium/zad73.cpp)
add_executable(zad74 aud_vezhbi/vtor_kolokvium/zad74.cpp)
add_executable(zad75 aud_vezhbi/vtor_kolokvium/zad75.cpp)
add_executable(zad76 aud_vezhbi/vtor_kolokvium/zad76.cpp)
add_executable(zad77 aud_vezhbi/vtor_kolokvium/zad77.cpp)
add_executable(zad78 aud_vezhbi/vtor_kolokvium/zad78.cpp)
add_executable(zad79 aud_vezhbi/vtor_kolokvium/zad79.cpp)
add_executable(zad80 aud_vezhbi/vtor_kolokvium/zad80.cpp)
add_executable(zad81 aud_vezhbi/vtor_kolokvium/zad81.cpp)
add_executable(zad82 aud_vezhbi/vtor_kolokvium/zad82.cpp)
add_executable(zad83 aud_vezhbi/vtor_kolokvium/zad83.cpp)
add_executable(zad84 aud_vezhbi/vtor_kolokvium/zad84.cpp)
add_executable(zad85 aud_vezhbi/vtor_kolokvium/zad85.cpp)
add_executable(zad86 aud_vezhbi/vtor_kolokvium/zad86.cpp)
add_executable(zad87 aud_vezhbi/vtor_kolokvium/zad87.cpp)
add_executable(zad88 aud_vezhbi/vtor_kolokvium/zad88.cpp)
add_executable(zad89 aud_vezhbi/vtor_kolokvium/zad89.cpp)
add_executable(zad90 aud_vezhbi/vtor_kolokvium/zad90.cpp)
add_executable(zad91 aud_vezhbi/vtor_kolokvium/zad91.cpp)
add_executable(zad92 aud_vezhbi/vtor_kolokvium/zad92.cpp)

add_executable(zad93 aud_vezhbi/vtorkolokvium-zadachi-vid-stefan/zad93.cpp)
add_executable(zad94 aud_vezhbi/vtorkolokvium-zadachi-vid-stefan/zad94.cpp)
add_executable(zad95 aud_vezhbi/vtorkolokvium-zadachi-vid-stefan/zad95.cpp)
add_executable(zad96 aud_vezhbi/vtorkolokvium-zadachi-vid-stefan/zad96.cpp)
add_executable(zad97 aud_vezhbi/vtorkolokvium-zadachi-vid-stefan/zad97.cpp)
add_executable(zad98 aud_vezhbi/vtorkolokvium-zadachi-vid-stefan/zad98.cpp)
add_executable(zad99 aud_vezhbi/vtorkolokvium-zadachi-vid-stefan/zad99.cpp)

add_executable(zad56 aud_vezhbi/vtorkolokvium-lani/zad56.cpp)
add_executable(zad57 aud_vezhbi/vtorkolokvium-lani/zad57.cpp)
add_executable(zad58 aud_vezhbi/vtorkolokvium-lani/zad58.cpp)
add_executable(zad59 aud_vezhbi/vtorkolokvium-lani/zad59.cpp)
add_executable(zad60 aud_vezhbi/vtorkolokvium-lani/zad60.cpp)
add_executable(zad61 aud_vezhbi/vtorkolokvium-lani/zad61.cpp)
add_executable(zad62 aud_vezhbi/vtorkolokvium-lani/zad62.cpp)
add_executable(zad63 aud_vezhbi/vtorkolokvium-lani/zad63.cpp)
add_executable(zad64 aud_vezhbi/vtorkolokvium-lani/zad64.cpp)
add_executable(zad65 aud_vezhbi/vtorkolokvium-lani/zad65.cpp)
add_executable(zad66 aud_vezhbi/vtorkolokvium-lani/zad66.cpp)
add_executable(zad67 aud_vezhbi/vtorkolokvium-lani/zad67.cpp)
add_executable(zad68 aud_vezhbi/vtorkolokvium-lani/zad68.cpp)

add_executable(lab1_1 labs_vezhbi/labs_24-25/lab1.cpp)
add_executable(lab_1_2 labs_vezhbi/labs_24-25/lab2.cpp)
add_executable(labs2_1 labs_vezhbi/labs_24-25/lab_nedela_2_1.cpp)
add_executable(labs2_2 labs_vezhbi/labs_24-25/lab_nedela_2_2.cpp)
add_executable(labs2_3 labs_vezhbi/labs_24-25/lab_nedela_2_3.cpp)
add_executable(lab3_1 labs_vezhbi/labs_24-25/lab_nedela_3_1.cpp)
add_executable(lab3_2 labs_vezhbi/labs_24-25/lab_nedela_3_2.cpp)
add_executable(lab3_3 labs_vezhbi/labs_24-25/lab_nedela_3_3.cpp)
add_executable(lab_nedela_3_1v2 labs_vezhbi/labs_24-25/lab_nedela_3_1v2.cpp)
add_executable(lab_nedela_3_2v2 labs_vezhbi/labs_24-25/lab_nedela_3_2v2.cpp)
add_executable(lab_nedela_3_3v2 labs_vezhbi/labs_24-25/lab_nedela_3_3v2.cpp)
add_executable(lab4_1 labs_vezhbi/labs_24-25/lab_nedela_4_1.cpp)
add_executable(lab4_2 labs_vezhbi/labs_24-25/lab_nedela_4_2.cpp)
add_executable(lab4_3 labs_vezhbi/labs_24-25/lab_nedela_4_3.cpp)
add_executable(lab8_1 labs_vezhbi/labs_24-25/lab8_det1.cpp)
add_executable(lab8_2 labs_vezhbi/labs_24-25/lab8_det2.cpp)
add_executable(lab8_3 labs_vezhbi/labs_24-25/lab8_det3.cpp)
add_executable(lab9_1 labs_vezhbi/labs_24-25/lab9_det1.cpp)
add_executable(lab9_2 labs_vezhbi/labs_24-25/lab9_det2.cpp)
add_executable(lab9_3 labs_vezhbi/labs_24-25/lab9_det3.cpp)

add_executable(lab_ushtrimi_1 labs_vezhbi/lab_ushtrime/lab_ushtrimi_1.cpp)
add_executable(lab_ushtrimi_2 labs_vezhbi/lab_ushtrime/lab_ushtrimi_2.cpp)
add_executable(lab_ushtrimi_3 labs_vezhbi/lab_ushtrime/lab_ushtrimi_3.cpp)
add_executable(lab_ushtrimi_4 labs_vezhbi/lab_ushtrime/lab_ushtrimi_4.cpp)
add_executable(lab_ushtrimi_5 labs_vezhbi/lab_ushtrime/lab_ushtrimi_5.cpp)
add_executable(lab_ushtrimi_6 labs_vezhbi/lab_ushtrime/lab_ushtrimi_6.cpp)
add_executable(lab_ushtrimi_7 labs_vezhbi/lab_ushtrime/lab_ushtrimi_7.cpp)
add_executable(lab_ushtrimi_8 labs_vezhbi/lab_ushtrime/lab_ushtrimi_8.cpp)
add_executable(lab_ushtrimi_9 labs_vezhbi/lab_ushtrime/lab_ushtrimi_9.cpp)

add_executable(lab_ushtrimi_10 labs_vezhbi/lab_ushtrime/lab_ushtrimi_10.cpp)
add_executable(lab_ushtrimi_11 labs_vezhbi/lab_ushtrime/lab_ushtrimi_11.cpp)
add_executable(lab_ushtrimi_12 labs_vezhbi/lab_ushtrime/lab_ushtrimi_12.cpp)
add_executable(lab_ushtrimi_13 labs_vezhbi/lab_ushtrime/lab_ushtrimi_13.cpp)
add_executable(lab_ushtrimi_14 labs_vezhbi/lab_ushtrime/lab_ushtrimi_14.cpp)
add_executable(lab_ushtrimi_15 labs_vezhbi/lab_ushtrime/lab_ushtrimi_15.cpp)
add_executable(lab_ushtrimi_16 labs_vezhbi/lab_ushtrime/lab_ushtrimi_16.cpp)
add_executable(lab_ushtrimi_17 labs_vezhbi/lab_ushtrime/lab_ushtrimi_17.cpp)
add_executable(lab_ushtrimi_18 labs_vezhbi/lab_ushtrime/lab_ushtrimi_18.cpp)
add_executable(lab_ushtrimi_19 labs_vezhbi/lab_ushtrime/lab_ushtrimi_19.cpp)

add_executable(lab_ushtrimi_20 labs_vezhbi/lab_ushtrime/lab_ushtrimi_20.cpp)
add_executable(lab_ushtrimi_21 labs_vezhbi/lab_ushtrime/lab_ushtrimi_21.cpp)
add_executable(lab_ushtrimi_22 labs_vezhbi/lab_ushtrime/lab_ushtrimi_22.cpp)
add_executable(lab_ushtrimi_23 labs_vezhbi/lab_ushtrime/lab_ushtrimi_23.cpp)
add_executable(lab_ushtrimi_24 labs_vezhbi/lab_ushtrime/lab_ushtrimi_24.cpp)
add_executable(lab_ushtrimi_25 labs_vezhbi/lab_ushtrime/lab_ushtrimi_25.cpp)
add_executable(lab_ushtrimi_26 labs_vezhbi/lab_ushtrime/lab_ushtrimi_26.cpp)
add_executable(lab_ushtrimi_27 labs_vezhbi/lab_ushtrime/lab_ushtrimi_27.cpp)
add_executable(lab_ushtrimi_28 labs_vezhbi/lab_ushtrime/lab_ushtrimi_28.cpp)
add_executable(lab_ushtrimi_29 labs_vezhbi/lab_ushtrime/lab_ushtrimi_29.cpp)

add_executable(lab_ushtrimi_30 labs_vezhbi/lab_ushtrime/lab_ushtrimi_30.cpp)
add_executable(lab_ushtrimi_31 labs_vezhbi/lab_ushtrime/lab_ushtrimi_31.cpp)
add_executable(lab_ushtrimi_32 labs_vezhbi/lab_ushtrime/lab_ushtrimi_32.cpp)
add_executable(lab_ushtrimi_33 labs_vezhbi/lab_ushtrime/lab_ushtrimi_33.cpp)
add_executable(lab_ushtrimi_34 labs_vezhbi/lab_ushtrime/lab_ushtrimi_34.cpp)
add_executable(lab_ushtrimi_35 labs_vezhbi/lab_ushtrime/lab_ushtrimi_35.cpp)
add_executable(lab_ushtrimi_36 labs_vezhbi/lab_ushtrime/lab_ushtrimi_36.cpp)
add_executable(lab_ushtrimi_37 labs_vezhbi/lab_ushtrime/lab_ushtrimi_37.cpp)
add_executable(lab_ushtrimi_38 labs_vezhbi/lab_ushtrime/lab_ushtrimi_38.cpp)
add_executable(lab_ushtrimi_39 labs_vezhbi/lab_ushtrime/lab_ushtrimi_39.cpp)

add_executable(lab_ushtrimi_40 labs_vezhbi/lab_ushtrime/lab_ushtrimi_40.cpp)
add_executable(lab_ushtrimi_41 labs_vezhbi/lab_ushtrime/lab_ushtrimi_41.cpp)
add_executable(lab_ushtrimi_42 labs_vezhbi/lab_ushtrime/lab_ushtrimi_42.cpp)
add_executable(lab_ushtrimi_43 labs_vezhbi/lab_ushtrime/lab_ushtrimi_43.cpp)
add_executable(lab_ushtrimi_44 labs_vezhbi/lab_ushtrime/lab_ushtrimi_44.cpp)
add_executable(lab_ushtrimi_45 labs_vezhbi/lab_ushtrime/lab_ushtrimi_45.cpp)
add_executable(lab_ushtrimi_46 labs_vezhbi/lab_ushtrime/lab_ushtrimi_46.cpp)
add_executable(lab_ushtrimi_47 labs_vezhbi/lab_ushtrime/lab_ushtrimi_47.cpp)
add_executable(lab_ushtrimi_48 labs_vezhbi/lab_ushtrime/lab_ushtrimi_48.cpp)
add_executable(lab_ushtrimi_49 labs_vezhbi/lab_ushtrime/lab_ushtrimi_49.cpp)

add_executable(lab_ushtrimi_50 labs_vezhbi/lab_ushtrime/lab_ushtrimi_50.cpp)

add_executable(ispitna1 ispitni_vezhbi/ispitna1.cpp)
add_executable(ispitna2 ispitni_vezhbi/ispitna2.cpp)
add_executable(ispitna3 ispitni_vezhbi/ispitna3.cpp)
add_executable(ispitna4 ispitni_vezhbi/ispitna4.cpp)
add_executable(ispitna5 ispitni_vezhbi/ispitna5.cpp)
add_executable(ispitna6 ispitni_vezhbi/ispitna6.cpp)
add_executable(ispitna7 ispitni_vezhbi/ispitna7.cpp)
add_executable(ispitna8 ispitni_vezhbi/ispitna8.cpp)
add_executable(ispitna9 ispitni_vezhbi/ispitna9.cpp)
add_executable(ispitna10 ispitni_vezhbi/ispitna10.cpp)
add_executable(ispitna11 ispitni_vezhbi/ispitna11.cpp)
add_executable(ispitna12 ispitni_vezhbi/ispitna12.cpp)
add_executable(ispitna13 ispitni_vezhbi/ispitna13.cpp)
add_executable(ispitna14 ispitni_vezhbi/ispitna14.cpp)
add_executable(ispitna15 ispitni_vezhbi/ispitna15.cpp)
add_executable(ispitna16 ispitni_vezhbi/ispitna16.cpp)
add_executable(ispitna17 ispitni_vezhbi/ispitna17.cpp)
add_executable(ispitna18 ispitni_vezhbi/ispitna18_midterm_eng_task1.cpp)
add_executable(ispitna19 ispitni_vezhbi/ispitna19_midterm_eng_task2.cpp)
add_executable(ispitna20 ispitni_vezhbi/ispitna20_kolokvium_mk_zad1_grupa1.cpp)
add_executable(ispitna21 ispitni_vezhbi/ispitna21_kolokvium_mk_zad2_grupa1.cpp)
add_executable(ispitna22 ispitni_vezhbi/ispitna22_kolokvium_mk_zad1_grupa2.cpp)
add_executable(ispitna23 ispitni_vezhbi/ispitna23_kolokvium_mk_zad2_grupa2.cpp)
add_executable(ispitna24 ispitni_vezhbi/ispitna24.cpp)
add_executable(ispitna25 ispitni_vezhbi/ispitna25.cpp)
add_executable(ispitna26 ispitni_vezhbi/ispitna26.cpp)
add_executable(ispitna27 ispitni_vezhbi/ispitna27.cpp)
add_executable(ispitna28 ispitni_vezhbi/ispitna28.cpp)
add_executable(ispitna29 ispitni_vezhbi/ispitna29.cpp)
add_executable(ispitna30 ispitni_vezhbi/ispitna30.cpp)
add_executable(ispitna31 ispitni_vezhbi/ispitna31.cpp)
add_executable(ispitna32 ispitni_vezhbi/ispitna32.cpp)
add_executable(ispitna33 ispitni_vezhbi/ispitna33.cpp)
add_executable(ispitna34 ispitni_vezhbi/ispitna34.cpp)
add_executable(ispitna35 ispitni_vezhbi/ispitna35.cpp)
add_executable(ispitna36 ispitni_vezhbi/ispitna36.cpp)
add_executable(ispitna37 ispitni_vezhbi/ispitna37.cpp)
add_executable(ispitna38 ispitni_vezhbi/ispitna38.cpp)
add_executable(ispitna39 ispitni_vezhbi/ispitna39.cpp)
add_executable(ispitna40 ispitni_vezhbi/ispitna40.cpp)